--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+}
+
 .title {
     display: flex;
     align-items: center;
@@ -19,4 +27,8 @@ label {
 
 .address {
     margin-top: 10px;
+}
+
+.picker {
+    padding: 10px;
 }
