--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,99 @@ html {
     color: #2c3e50;
 }
 
-.title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+a {
+    text-decoration: none;
 }
 
-.container {
+.app {
+    max-width: 1200px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 100vh;
+}
+
+header {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    border-bottom: 1px solid green;
+}
+
+.logo img {
+    width: 150px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    margin-right: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+nav ul li a {
+    color: green;
+    font-weight: 500;
+    padding: 10px;
+}
+
+nav ul li:hover * {
+    color: white;
+    background-color: rgb(0, 100, 0);
+}
+
+nav ul li a.active {
+    color: white;
+    background-color: rgb(0, 37, 0);
+    pointer-events: none;
+}
+
+footer {
+    position: absolute;
+    height: 50px;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid green;
+    padding-top: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+fieldset {
+    margin-top: 35px;
+    padding-bottom: 15px;
+}
+
+button {
+    margin-top: 70px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-color: black;
+    background-color: rgb(233, 232, 232);
+    color: rgb(0, 100, 0);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    color: white;
+    background-color: rgb(0, 100, 0);
 }
 
 label {
@@ -25,10 +107,42 @@ label {
     margin-bottom: 10px;
 }
 
-.address {
-    margin-top: 10px;
-}
-
 .picker {
     padding: 10px;
+}
+
+.modal.show {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    background-color: rgba(209, 209, 209, 0.8);
+}
+
+.modal.hide {
+    display: none;
+}
+
+.modal .content {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    padding: 20px;
+    border-radius: 10px;
+    background-color: grey;
+    width: 50%;
+}
+
+.confirm.message {
+    color: white;
+    font-size: larger;
+    padding: 20px;
+}
+
+.confirm.info {
+    color: whitesmoke;
 }
