--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 html {
-    font-family: 'Roboto medium 500', sans-serif;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
@@ -26,13 +24,6 @@ form {
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
-}
-
-@media (max-width: 920px) {
-    form {
-        display: flex;
-        flex-direction: column-reverse;
-    }
 }
 
 fieldset {
@@ -76,7 +67,7 @@ label {
     width: 100%;
     height: 100%;
     z-index: 99999;
-    background-color: rgba(225, 238, 212, 0.8);
+    background-color: rgba(209, 209, 209, 0.8);
 }
 
 .modal.hide {
@@ -96,6 +87,4 @@ label {
 .confirm.message {
     font-size: larger;
     padding: 20px;
-    background-color: #f9f9fa;
-    border-radius: 15px;
 }
