--- a/src/components/Toolbar.css
+++ b/src/components/Toolbar.css
@@ -1,7 +1,10 @@
 nav ul {
     list-style: none;
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     margin-right: 20px;
+    padding: 0;
 }
 
 nav ul li {
@@ -24,4 +27,14 @@ nav ul li a.active {
     color: white;
     background-color: rgb(0, 37, 0);
     pointer-events: none;
+}
+
+@media screen and (max-width: 767px) {
+    nav ul {
+        flex-wrap: wrap;
+    }
+    nav ul li {
+        width: 100%;
+        margin-top: 20px;
+    }
 }
