--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,16 @@ html {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
+    box-sizing: border-box;
 }
 
 a {
     text-decoration: none;
+}
+
+input,
+select {
+    box-sizing: border-box;
 }
 
 .app {
@@ -16,75 +22,4 @@ a {
     left: 50%;
     transform: translateX(-50%);
     height: 100vh;
-}
-
-form {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-fieldset {
-    margin-top: 35px;
-    padding-bottom: 15px;
-}
-
-button {
-    margin-top: 70px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-color: black;
-    background-color: rgb(233, 232, 232);
-    color: rgb(0, 100, 0);
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    color: white;
-    background-color: rgb(0, 100, 0);
-}
-
-label {
-    display: block;
-    margin-top: 1rem;
-    margin-bottom: 10px;
-}
-
-.picker {
-    padding: 10px;
-}
-
-.modal.show {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 99999;
-    background-color: rgba(209, 209, 209, 0.8);
-}
-
-.modal.hide {
-    display: none;
-}
-
-.modal .content {
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    padding: 20px;
-    border-radius: 10px;
-    width: 50%;
-}
-
-.confirm.message {
-    font-size: larger;
-    padding: 20px;
 }
