--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,15 @@ select {
     transform: translateX(-50%);
     height: 100vh;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
